Fix port binding, CORS, JVM flags, and add Render blueprint